k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vacation-app
  namespace: vacationapp # <-- Added namespace here
spec:
  selector:
    app: vacation-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
